# ICP-Delete-Leaf

./: .gitignore  Cargo.toml  MKTd02_Integration_Guide.md  MKTd02_v0.4.1_RePin_Deliverable.md  P0x_v0.4.1_RePin_BuildPacket  README.md  RELEASES.md  RESIDUAL_TRUST_STATEMENT.md
.github/workflows/: build-guide.yml
docs/: RESIDUAL_TRUST_STATEMENT.md  compose.yaml
docs/architecture/: finalization-flow.md
docs/scripts/: compose.py
docs/sections/: 00-header.md  01-prereqs-product.md  02-add-crate.md  03-adapter.md  04-lifecycle-hooks.md  05-api-endpoints.md  06-stable-memory.md  07-receipt-export.md  08-ref-adapters.md  09-assumptions-product.md  10-verification.md  11-deterministic-encoding.md  12-residual-trust.md  module-hash-pipeline.md
examples/: adapter_stable_btreemap.rs  adapter_stable_cell.rs  webhook_export.rs
harness/: Cargo.toml
harness/src/: lib.rs
harness/tests/: runtime.rs
mktd02/: Cargo.toml
mktd02-macros/: Cargo.toml
mktd02-macros/src/: lib.rs
mktd02/src/: certified.rs  engine.rs  export.rs  finalization.rs  guard.rs  lib.rs  nonce.rs  state.rs  storage.rs  trait_def.rs
scripts/: finalize_receipt_generic.sh
zombie-core/: Cargo.toml
zombie-core/src/: hashing.rs  lib.rs  manifest.rs  receipt.rs  serialisation.rs  tombstone.rs
