[package]
name = "mktd02-macros"
description = "Procedural macros for MKTd02 (#[mktd_guard])"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
