[package]
name = "mktd02"
description = "MKTd02 Leaf-mode CVDR engine for ICP canisters"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Pin by commit hash during active development.
# Switch to tag = "zombie-core-vX.Y.Z" for releases.
# NAMING CONVENTION: always write "zombie-core vX.Y.Z" (repo-prefixed)
# when referencing this dependency alongside MKTd02 version strings.
zombie-core = { git = "https://github.com/Together-Alone-Ventures/zombie-core", rev = "5fcc3cc" }
ic-cdk = "0.17"
ic-stable-structures = "0.6"
candid = "0.10"
serde = { version = "1", features = ["derive"] }
ciborium = "0.2"
hex = "0.4"
serde_json = { version = "1", optional = true }

[features]
default = []
json = ["serde_json"]
# local-replica: enables the dfx local replica NNS root key.
# NEVER enable this in a mainnet/release build.
# CI release workflow enforces this — see .github/workflows/release.yml.
local-replica = []
